[Curl] Compile error in CurlDownload.cpp. https://bugs.webkit.org/show_bug.cgi?id=137654

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-10-14
Reviewed by Philippe Normand.

A template specialization is not needed anymore.

* platform/network/curl/CurlDownload.cpp:

Canonical link: https://commits.webkit.org/155534@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174673 268f45cc-cd09-0410-ab3c-d52691b4dbfc